<resources>
    <string name="app_name">Order Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Ürünler</string>
    <string name="search">Ara</string>
    <string name="basket">Sepet</string>
    <string name="search_product">Ürün Ara</string>
    <string name="categories">Kategoriler</string>
    <string name="order">Sipariş</string>
    <string name="profile">Profil</string>
    <string name="product_image_description">Ürün Resmi</string>
    <string name="add_basket">Sepete Ekle</string>
    <string name="cancel">Kapat</string>
    <string name="success_add_basket">Ürün Sepete Eklendi</string>
    <string name="try_again">Yeniden Dene</string>
    <string name="delete">Sil</string>
    <string name="approve_basket">Sepeti Onayla</string>
    <string name="go_shopping">Sipariş Ekle</string>
    <string name="empty_basket">Sepetiniz Boş</string>
    <string name="payment_screen">Ödeme Ekranı</string>
    <string name="type_order_note">Sipariş Notu</string>
    <string name="dont_knock">Zili Çalma</string>
    <string name="order_note_hint">Sipariş Notu Giriniz</string>
    <string name="address">Adres</string>
    <string name="order_address">Adres Giriniz</string>
    <string name="payment_type">Ödeme Tipi</string>
    <string name="orderNow">Siparişi Tamamla</string>
    <string name="close">Kapat</string>
    <string name="order_approved">Siparişiniz Alındı</string>
    <string name="we_will_send_info">Siparişiniz ile ilgili bilgileri en kısa sürede size ileteceğiz</string>
    <string name="okay">Tamam</string>
    <string name="paymeny_summary">Ödeme Tutarı</string>
    <string name="order_amount">Sipariş Tutarı</string>
    <string name="discount_amount">İndirim Tutarı</string>
    <string name="payment_total_amount">Ödenecek Tutar</string>
    <string name="address_error">Adres Boş Geçilemez</string>
    <string name="person_image">Kullanıcı Resmi</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="e_mail_hint">Email</string>
    <string name="password_hint">Şifre</string>
    <string name="phone_number_hint">Telefon Numarası</string>
    <string name="confirm_password_hint">Şifre Doğrula</string>
    <string name="invalid_mail">Geçersiz Email</string>
    <string name="password_match_error">Şifreler Uyuşmuyor</string>
    <string name="registered_mail">Bu Emaile Kayıtlı Bir Kullanıcı Bulunmaktadır</string>
    <string name="complate_not_entered_info">Tamamlanmayan Alanları Doldurunuz</string>
    <string name="sign_up_success">Kayıt Oluşturululdu</string>
    <string name="wrong_email_password">Kullanıcı Adı Veya Şifre Hatalı</string>
    <string name="error">Hata !</string>
    <string name="success">Başarılı</string>
    <string name="login_success">Giriş Başarılı</string>
    <string name="six_char_error">Şifre en az 6 karakterden oluşmalıdır</string>
    <string name="app_logo">Uygulama Resmi</string>

    <string-array name="app_logo_strings">
        <item>M255.7,459.08c-56,0 -111.95,-0.09 -167.92,0.06 -15.52,0 -26.35,-6.78 -32.73,-20.69 -1.7,-3.71 -2,-7.93 -2,-12q0,-170.16 0,-340.31c0,-19 14.19,-33 33.22,-33q169.66,-0.06 339.34,0C445,53.11 459,67.14 459,86.5q0.06,169.91 0,339.82c0,18.76 -14.09,32.73 -32.86,32.74Q340.91,459.12 255.7,459.08ZM197.48,147.88c-14.66,0 -29.32,0.19 -44,-0.12 -4,-0.08 -5.88,1.25 -7.31,4.82 -3.95,9.9 -7.93,19.79 -10.67,30.08 -5.25,19.76 -8.78,39.72 -5.17,60.23 3,17.09 10.58,31.37 25.42,41.27 8.24,5.5 17.41,8.26 27,9.63 3.87,0.56 4.82,2.11 4.74,5.78q-0.33,16.23 0,32.47c0.08,3.48 -0.91,4.94 -4.42,5.68 -9,1.9 -17.81,4.21 -26.68,6.49 -5.25,1.35 -8.63,5.88 -8.11,10.5a10.33,10.33 0,0 0,10.43 9q38.48,0.13 77,0c5.66,0 9.9,-3.77 10.49,-8.77s-2.55,-9.31 -8.27,-10.76c-8.87,-2.24 -17.74,-4.56 -26.68,-6.5 -3.29,-0.71 -4.2,-2.12 -4.14,-5.36 0.19,-10.82 0.26,-21.66 0,-32.48 -0.1,-3.9 0.89,-5.48 4.95,-6 14.23,-1.94 27,-7.23 36.87,-18.08 14.61,-16.07 17.71,-35.69 16.54,-56.35 -1.34,-23.72 -8.09,-46.1 -17.53,-67.79 -1.32,-3 -2.93,-3.75 -6,-3.72C227.13,148 212.3,147.88 197.48,147.88ZM383.12,191.59c0,-11.67 0,-21.16 0,-30.65 0,-8.19 -3.69,-13.05 -9.83,-13s-9.52,4.7 -9.55,12.68c0,6.17 0,12.33 0,18.49 0,9 0.13,18 -0.06,27 -0.14,6.28 -4.25,10.31 -9.92,10.29 -5.83,0 -9.41,-3.9 -9.61,-10.42 -0.05,-1.66 0,-3.33 0,-5q0,-21.24 0,-42.47c0,-4.66 -2.22,-7.88 -6.44,-9.79 -3.66,-1.65 -6.86,-0.56 -9.75,1.75s-3.53,5.84 -3.53,9.46q0,22.72 0,45.46c0,3.66 -0.64,7 -4,9.17a9.76,9.76 0,0 1,-10.41 0.68c-3.91,-2 -5.2,-5.41 -5.21,-9.49 0,-15.49 0,-31 0,-46.47 0,-6.74 -3.75,-11.12 -9.42,-11.32s-10.11,4.67 -10.14,11.25c-0.07,18.65 -0.63,37.33 0.16,56 1,22.83 11.91,39.41 33.77,47.77 2.49,0.95 2.83,2.13 2.59,4.39Q320,284 318.49,300.61c-1.27,13.93 -2.7,27.85 -3.58,41.8C314,357.23 327,367 340.78,362.15c9.35,-3.29 13.84,-11.25 12.77,-22.74 -2.16,-23.2 -4.22,-46.42 -6.65,-69.6 -0.47,-4.5 0.78,-6.24 4.94,-7.84 16.26,-6.24 26.39,-18.12 30,-35.18C384.52,214.44 382.46,201.87 383.12,191.59Z</item>
        <item>M197.48,147.88c14.82,0 29.65,0.08 44.47,-0.06 3,0 4.64,0.69 6,3.72 9.44,21.69 16.19,44.07 17.53,67.79 1.17,20.66 -1.93,40.28 -16.54,56.35C239,286.53 226.26,291.82 212,293.76c-4.06,0.56 -5.05,2.14 -4.95,6 0.29,10.82 0.22,21.66 0,32.48 -0.06,3.24 0.85,4.65 4.14,5.36 8.94,1.94 17.81,4.26 26.68,6.5 5.72,1.45 8.88,5.65 8.27,10.76s-4.83,8.76 -10.49,8.77q-38.47,0.12 -77,0a10.33,10.33 0,0 1,-10.43 -9c-0.52,-4.62 2.86,-9.15 8.11,-10.5 8.87,-2.28 17.73,-4.59 26.68,-6.49 3.51,-0.74 4.5,-2.2 4.42,-5.68q-0.33,-16.23 0,-32.47c0.08,-3.67 -0.87,-5.22 -4.74,-5.78 -9.61,-1.37 -18.78,-4.13 -27,-9.63 -14.84,-9.9 -22.41,-24.18 -25.42,-41.27 -3.61,-20.51 -0.08,-40.47 5.17,-60.23 2.74,-10.29 6.72,-20.18 10.67,-30.08 1.43,-3.57 3.27,-4.9 7.31,-4.82C168.16,148.07 182.82,147.88 197.48,147.88Z</item>
        <item>M383.12,191.59c-0.66,10.28 1.4,22.85 -1.24,35.2 -3.65,17.06 -13.78,28.94 -30,35.18 -4.16,1.6 -5.41,3.34 -4.94,7.84 2.43,23.18 4.49,46.4 6.65,69.6 1.07,11.49 -3.42,19.45 -12.77,22.74C327,367 314,357.23 314.91,342.41c0.88,-14 2.31,-27.87 3.58,-41.8q1.51,-16.67 3.28,-33.3c0.24,-2.26 -0.1,-3.44 -2.59,-4.39 -21.86,-8.36 -32.8,-24.94 -33.77,-47.77 -0.79,-18.62 -0.23,-37.3 -0.16,-56 0,-6.58 4.59,-11.45 10.14,-11.25s9.39,4.58 9.42,11.32c0.05,15.49 0,31 0,46.47 0,4.08 1.3,7.53 5.21,9.49a9.76,9.76 0,0 0,10.41 -0.68c3.31,-2.19 4,-5.51 4,-9.17q0,-22.73 0,-45.46c0,-3.62 0.51,-7.06 3.53,-9.46s6.09,-3.4 9.75,-1.75c4.22,1.91 6.43,5.13 6.44,9.79q0,21.23 0,42.47c0,1.66 0,3.33 0,5 0.2,6.52 3.78,10.39 9.61,10.42 5.67,0 9.78,-4 9.92,-10.29 0.19,-9 0.05,-18 0.06,-27 0,-6.16 0,-12.32 0,-18.49 0,-8 3.55,-12.64 9.55,-12.68s9.82,4.81 9.83,13C383.13,170.43 383.12,179.92 383.12,191.59Z</item>
    </string-array>
    <integer-array name="app_logo_colors">
        <item>@color/primary</item>
        <item>@color/secondary</item>
        <item>@color/secondary</item>
    </integer-array>
</resources>