<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.basket.BasketFragment">

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/empty_basket"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="empty_basket.json"
            app:lottie_loop="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_bg2"
            android:text="@string/go_shopping"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:rippleColor="@color/white" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />

            <include layout="@layout/product_placeholder" />


        </LinearLayout>


    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basketRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/approveLayout"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/approveLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="vertical"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg3"
                android:backgroundTint="#D1D2D3"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="150,00 ₺" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/approveBasket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg2"
                android:text="@string/approve_basket"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>